--- a/flask-docker-test.conf
+++ b/flask-docker-test.conf
@@ -2,13 +2,7 @@
 
 server {
     listen 80;
-    #listen 443 ssl;
     server_name  f-server.viewdns.net;
-
-    #ssl_certificate /etc/nginx/ssl/your-site.com/fullchain.crt;
-    #ssl_certificate_key /etc/nginx/ssl/your-site.com/server.key;
-    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    #ssl_ciphers HIGH:!aNULL:!MD5;
 
     # affects the size of files user can upload with HTTP POST
     #client_max_body_size 10M;
@@ -46,8 +40,8 @@ server {
 }
 
 # HTTP to HTTPS redirection
-#server {
-#        listen 80;
-#        server_name f-server.viewdns.net;
-#        return 301 https://f-server.viewdns.net$request_uri;
-#}
+server {
+        listen 80;
+        server_name f-server.viewdns.net;
+        return 301 https://f-server.viewdns.net$request_uri;
+}
